camo-derive/tests/fail/bounded_generics.stderr
error: `camo` does not support generic bounds
 --> tests/fail/bounded_generics.rs:4:15
  |
4 | struct Foo<T: Clone> {
  |               ^^^^^
